# bf2c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  ProjectOptions.cmake  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
app/: CMakeLists.txt
app/include/app/: config.h.in
app/src/: main.c
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  setup.py
bindings/python/src/: bf2c.py
bindings/python/src/bf2c/: __init__.py  py_bf2c.c
cmake/: CompilerWarnings.cmake
lib/: CMakeLists.txt
lib/bf2c/: CMakeLists.txt
lib/bf2c/include/bf2c/: c_emitter.h  command.h  optimize.h  parser.h  program.h  token.h
lib/bf2c/src/: c_emitter.c  command.c  optimize.c  parser.c  program.c  token.c
lib/cli/: CMakeLists.txt
lib/cli/include/: cli.h  options.h
lib/cli/include/cli/: cli.h  error_codes.h  option.h  options.h  param.h  result.h
lib/cli/src/: cli.c  error_codes.c  option.c  options.c  param.c  result.c
lib/core/: CMakeLists.txt
lib/core/include/core/: abort.h  logging.h  result.h  vector.h
lib/core/include/core/result/: result.h
lib/core/include/core/util/: logging.h
lib/core/src/: logging.c  result.c  vector.c
lib/core/src/result/: result.c
lib/core/src/util/: logging.c
lib/logging/: CMakeLists.txt
lib/logging/include/logging/: logging.h
